Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1852

KuduTableAlterer crashes when given nullptr range bound arguments

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.2.0
    • 1.3.0
    • client
    • None

    Description

      I was using KuduTableAlterer and accidentally passed nullptr as a bound instead of an empty row. This caused a crash where it should have returned a bad status.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: