KUDU-1852. KuduTableAlterer should not crash with nullptr arguments

Change-Id: Ifa7c34b476111ecd33d4fd3ef5cc363a410ad76a
Reviewed-on: http://gerrit.cloudera.org:8080/5797
Reviewed-by: Dan Burkert <danburkert@apache.org>
Tested-by: Kudu Jenkins
(cherry picked from commit 8a2ea8bddc88e8de60952b369f112b32710ee19b)
Reviewed-on: http://gerrit.cloudera.org:8080/6204
Reviewed-by: Jean-Daniel Cryans <jdcryans@apache.org>